twitch/twitter shortlinks added

--- a/subscribe.html
+++ b/subscribe.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL='http://new-website.com'" />
+<meta http-equiv="refresh" content="0; URL='http://bit.ly/subtosamstep'" />
