--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 					<header id="header">
 						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 						<h1>Hello. I'm <strong>Samstep</strong>, I'm a beginner programmer here to learn!</h1>
-						<ul><a href='samstep.ga/about' class='button'>About Me</a></ul>
+						<a href='/about' class='button'>About Me</a>
+						<ul></ul>
 						<ul class="icons">
-							<li><a href="http://twitter.com/saamstep" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon style2 fa-youtube"><span class="label">YouTube</span></a></li>
-							<li><a href="#" class="icon style2 fa-twitch"><span class="label">Twitch</span></a></li> 
+							<li><a href="https://twitter.com/saamstep" target="_blank" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://bit.ly/sub2samstep" target="_blank" class="icon style2 fa-youtube"><span class="label">YouTube</span></a></li>
+							<li><a href="https://twitch.tv/saamstep" target="_blank" class="icon style2 fa-twitch"><span class="label">Twitch</span></a></li> 
 		<!--					<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
 							<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>  -->
 						</ul>
@@ -76,7 +77,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p>&copy; Untitled. All rights reserved. Design: <a href="http://templated.co">TEMPLATED</a></p>
+						<p>&copy; Samstep Site :) | Design: <a href="http://templated.co">TEMPLATED</a></p>
 					</footer>
 
 			</div>
