contact page | form

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
+	
 
 				<!-- Header -->
 					<header id="header">
 						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 						<h1>Hello. I'm <strong>Samstep</strong>, I'm a beginner programmer here to learn!</h1>
-						<a href='/about' class='button'>About Me</a>
+						<a href='/about' class='button'>About Me</a> &nbsp; <a href='/contact' class='button'>Contact Me</a> &nbsp; <a href='/#projects' class='button'>My Projects</a>
 						<ul></ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/saamstep" target="_blank" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
@@ -33,7 +34,8 @@
 					</header>
 
 				<!-- Main -->
-					<section id="main">
+				<section id="main">
+
 
 						<!-- Thumbnails -->
 							<section class="thumbnails">
