--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<h1>Hello. I'm <strong>Samstep</strong>.</h1>
 						<p><body>I am a beginner programmer. The idea of programming to me is really fun. I enjoy seeing the code in the editor being transformed to something visually beautiful. I first got into programming through a game called <a href="http://minecraft.net" target="_blank">Minecraft</a>. Some of my command block tutorials are still up if you are interested (<a href="http://samstep.ga/subscribe" target="_blank">My YouTube</a>). A few years later, when a wonderful chat program for gamers called <a href="http://discordapp.com" target="_blank">Discord</a> appeared out of nowhere. I learned you could make chat bots! I chose JavaScript for some unknown reason, but it was a really nice learning experience indeed. Ever since I was young I loved technology. Technology is how I got into programming in the first place. As I got older I learned what makes up a computer and how they opereate. I am still very much a novice. But I learn something new everyday.</body></p>
 						<h6>See my PC Build Guide by clicking the button below.</h6>
-						<a href='/contact' class='button'>Contact Me</a> &nbsp; <a href='/pc' class='button'>PC Builds</a>
+						<a href='/contact' class='button'>Contact Me</a> &nbsp; <a href='/pc/guide' class='button'>PC Builds</a>
 						<ul></ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/saamstep" target="_blank" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
