--- a/pc/guide.html
+++ b/pc/guide.html
@@ -26,7 +26,7 @@
 						<a href='/#' class='button'>Go Home</a>
 					</header>
 
-
+						
         <!-- Main -->
       <h2>Guide</h2>  
       <h4>What computer is right for me?</h4>
@@ -53,9 +53,12 @@
 	  <h6>CPU Cooler:</h6> <p>The two choices for coolers are air coolers or water cooling. If you do not overclock your CPU then an air cooler should be ok. However, if you overclock your CPU to the extreme then a AIO or all in one water cooler should help with that the high tempratures. This is a very important part of your computer as a CPU getting thermal throttled can limit the performance of it and reduce the life of your CPU. With AMD Ryzen the stock coolers are plentiful for lite overclocking. For overclocking a recommended cooler is the Corsair H100i v2 or an NZXT Kraken x62.</p>
 	  <h6>Power Supply:</h6> <p>An underwattaged power supply can hurt your system. Use PcPartPickers recommended wattage and add 300-400 more watts and you should be covered. If you are on a tight budget pick up an 80+ Bronze power supply. If you have some money an 80+ Gold power supply is higher quality. Some recommended brands are SeaSonic, EVGA, and Corsair. </p>
 	  <h6>Case:</h6> <p>Cases are a personal preference. Just make sure to get one that will fit your motherboard size (ATX, mATX or ITX).</p>
-	  <h6>Graphics Card:</h6> <p>One of the most important parts of your system is the graphics card. </p>
- 				<!-- Footer -->
-					<footer id="footer">
+	  <h6>Graphics Card:</h6> <p>One of the most important parts of your system is the graphics card. If you are not picky about the brand, the best brand to go with currently is NVIDIA. Some options (ranging from lowest performance to highest) is the 1050ti, 1060, 1070, 1070ti, 1080, and 1080ti. Currently with graphics cards, prices are inflated due to cryptocurrency mining. Go to <a href="https://pcpartpicker.com/trends/price/video-card/" target="_blank">this</a> chart to see how inflated prices are and if it is even worth getting the graphics card.  If you want to run anything max at 4k or run a 1080 or a 1080ti should work beautifully. Some reputable brands for graphics cards are as follows: EVGA, Gigabyte, Asus, MSI, Zotac, PNY, Corsair (Hydro Series).</p>
+	  <img src="../images/flowchart.png" alt="Helpful flowchart" width="70%"/>	
+      <h6>RAM:</h6> <p>RAM or random access memory is a component commonly used to store information tempoarily. </p>
+
+	  <!-- Footer -->
+						<footer id="footer">
 						<p>&copy; Samstep Site :) | Design: <a href="http://templated.co">TEMPLATED</a></p>
 					</footer>
 
