random error404 messages

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 -->
 <html>
 	<head>
-		<title>Samstep - About</title>
+		<title>Samstep - ?</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,13 +20,13 @@
 				<!-- Header -->
 					<header id="header">
 						<span class="avatar"><img src="images/avatarqmark.png" alt="" /></span>
-						<h1 style=font-size:130px>That was not found D:</h1>
-						<a href='/#' class='button'>Go Home</a>
+		
+						<ul><a href='/#' class='button'>Go Home</a></ul>
 					</header>
 
 
 				<!-- Main -->
-					
+			<center><h1><script language="javascript" type="text/javascript" src="js/quotes.js"></script></h1></center>
 				
 
 				<!-- Footer -->
