--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 							</div>
 						</section>
 
+						<center><iframe src="https://discordapp.com/widget?id=136639473881448448&theme=dark" width="350" height="350" allowtransparency="true" frameborder="0"></iframe></center>
+
 				</section>
 
 					
