osx config file added

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<!-- Thumbnails -->
 						<section class="thumbnails">
 							<div>
-								<a>
+								<a href="https://github.com/saamstep/nanobot/wiki">
 									
 									<img src="images/thumbs/nano.png" alt="" />
 									<h3>NanoBot</h3>
@@ -88,8 +88,9 @@
 								</a> -->
 							</div>
 						</section>
-
-						<center><iframe src="https://discordapp.com/widget?id=136639473881448448&theme=dark" width="350" height="350" allowtransparency="true" frameborder="0"></iframe></center>
+						<p> &nbsp; </p>
+							<center><h1>Join my Discord Server!</h1></center>
+						<center><iframe src="https://discordapp.com/widget?id=136639473881448448&theme=light" width="350" height="350" allowtransparency="true" frameborder="0"></iframe></center>
 
 				</section>
 
