--- a/bots/index.html
+++ b/bots/index.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="theme.css">
-  <title>Samstep - Home</title>
+  <title>Samstep - Discord Bots</title>
   <link rel="icon" href="https://avatars2.githubusercontent.com/u/24730717?s=400&amp;v=4">
+  <link rel="stylesheet" href="../theme.css">
 </head>
 
-<body class="bg-dark">
+<body>
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark" style="">
     <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
         <p class="navbar-brand mb-0 text-white"> BRAND </p>
@@ -20,7 +21,7 @@
           <li class="nav-item"> <a class="nav-link" href="#">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="#">Discord Bots</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="#">MC Projects</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="#">MC Tutorials &amp; Projects</a> </li>
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
@@ -36,32 +37,58 @@
       </div>
     </div>
   </nav>
-  <div class="bg-dark py-5 pb-5">
+  <div class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-2 mt-2 col-md-3" style=""><img class="d-block rounded-circle img-fluid float-left" src="https://pbs.twimg.com/profile_images/1004998577490354176/B9bchwQa_400x400.jpg" width="200"></div>
-        <div class="ml-0 mt-0 col-sm-10 col-md-9" style="">
-          <h1 class="display-1 text-light">Could not find that page.</h1>
-          <p class="">Hello, my name is <b>Samstep</b>. I enjoy making <b>Discord</b> <b>Bots</b> and fun <b>Minecraft</b> creations in my pass time!</p>
+        <div class="col-md-12">
+          <h1 class="display-4">Discord Bots</h1>
         </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 text-body">
+          <div class="card">
+            <div class="card-body">
+              <h3 class=""><span class="badge badge-light">New</span></h3>
+              <h4 class="card-title">Nano</h4>
+              <p class="card-text">The custom bot for you Minecraft SMP.</p> <a href="https://github.com/saamstep/nanobot/wiki" class="btn btn-primary">Learn More</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <h3 class=""><span class="badge badge-light">In Development</span></h3>
+              <h4 class="card-title">Nerd</h4>
+              <p class="card-text text-body">The bot that knows everything. <b>(Soon)</b></p> <a href="#" class="btn btn-primary disabled">Learn More</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <h3 class=""><span class="badge badge-light">Deprecated</span></h3>
+              <h4 class="card-title">Honeydew</h4>
+              <p class="card-text">A Discord bot built with JS for Honeydew. <b class="text-success">This bot is being rebuilt!</b></p> <a href="#" class="btn btn-primary disabled">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="bg-dark pt-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="display-4 text-light">Contact</h1>
+          <p class="text-white">The best way to get a hold of me is via Twitter.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12"><a class="btn text-white p-0 py-0 pr-0 m-0 mx-0" href="http://bit.ly/tweetsamstep" style="background: rgb(85, 172, 238);" target="_blank" id="center"><i class="fa fa-twitter fa-fw fa-1x py-1"></i> Tweet</a></div>
       </div>
     </div>
   </div>
   <div class="py-3 bg-dark">
     <div class="container">
-      <div class="row"></div>
-    </div>
-  </div>
-  <div class="py-3 bg-dark">
-    <div class="container">
-      <div class="row"></div>
-    </div>
-  </div>
-  <div class="py-5">
-    <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <p class="text-white mt-5 pt-5">Website by Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
+          <p class="text-white">Website by Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
         </div>
       </div>
     </div>
@@ -69,8 +96,8 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  
   <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
- 
 </body>
 
 </html>
