--- a/mc/tutorials/joinmsg_everytime.html
+++ b/mc/tutorials/joinmsg_everytime.html
@@ -6,8 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="theme.css">
-  <title>Samstep - Home</title>
+  <title>Samstep - Custom Join Message</title>
   <link rel="icon" href="https://avatars2.githubusercontent.com/u/24730717?s=400&amp;v=4">
+  <link rel="stylesheet" href="../theme.css">
+  <link rel="stylesheet" href="..css">
+  <link rel="stylesheet" href="../..css">
+  <link rel="stylesheet" href="../../theme.css">
 </head>
 
 <body>
@@ -17,10 +21,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbar14">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item"> <a class="nav-link" href="#">Home</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="#">Discord Bots</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="#">MC Projects</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="/bots">Discord Bots</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link active" href="/mc">MC Tutorials &amp; Projects</a> </li>
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
@@ -39,50 +43,46 @@
   <div class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-2 mt-2 col-md-3" style=""><img class="d-block rounded-circle img-fluid float-left" src="https://pbs.twimg.com/profile_images/1004998577490354176/B9bchwQa_400x400.jpg" width="200"></div>
-        <div class="ml-0 mt-0 col-sm-10 col-md-9" style="">
-          <h1 class="display-1">Welcome!</h1>
-          <p class="">Hello, my name is <b>Samstep</b>. I enjoy making <b>Discord</b> <b>Bots</b> and fun <b>Minecraft</b> creations in my pass time!</p>
+        <div class="col-md-12">
+          <h1 class="">Custom Join Message (Everytime)</h1>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="py-3">
-    <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          <div class="card text-center">
-            <div class="card-header"> Recent Project</div>
+        <div class="col-md-12 text-body">
+          <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Nano Bot</h5>
-              <p class="card-text">The Simple Minecraft SMP Manager Bot for <a href="http://discordapp.com" target="_blank">Discord</a>.</p>
-              <a href="#" class="btn btn-primary">Learn More</a>
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe src="https://youtube.com/embed/S0WoWQTGki8" allowfullscreen="" class="embed-responsive-item"></iframe>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="py-5">
-    <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          <h1 class="display-4">Minecraft Projects</h1>
-          <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"> </li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"> </li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"> </li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active" style=""> <img class="d-block img-fluid w-100 mx-auto" src="https://img.youtube.com/vi/hKEv2qAz9_M/maxresdefault.jpg">
-              </div>
-              <div class="carousel-item "> <img class="d-block img-fluid w-100" style="" src="https://img.youtube.com/vi/S0WoWQTGki8/maxresdefault.jpg">
-              </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="https://img.youtube.com/vi/zMVlPuyuYMk/maxresdefault.jpg">
-              </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 my-3" style="">
+          <h3 class="">About:</h3>
+          <p class="mt-3">I show you a version of the custom join system that allows it to work whenever a player joins your world!</p>
+        </div>
+        <div class="col-md-6 mt-4">
+          <div class="list-group">
+            <a href="#" class="list-group-item">MC Version: 1.9 - 1.10</a>
+            <a href="https://www.youtu.be/S0WoWQTGki8" class="list-group-item list-group-item-action">YouTube Video URL: https://www.youtu.be/S0WoWQTGki8</a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 mt-3">
+          <div class="card text-white bg-secondary mb-3">
+            <div class="card-header">Commands</div>
+            <div class="card-body">
+              <h5 class="card-title">In Chat:</h5>
+              <p class="card-text">/scoreboard objectives add joinGame stat.leaveGame</p>
+              <h5 class="card-title">Command Block(s):</h5>
+              <p class="card-text">/testfor @a[score_joinGame_min=1]<br><br>[insert your commands here]<br><br>/scoreboard players set @a[score_joinGame_min=1] joinGame 0</p>
             </div>
-          </div><a class="btn btn-secondary text-center btn-block mx-auto mt-2" href="#">See More</a>
+          </div>
         </div>
       </div>
     </div>
@@ -112,7 +112,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
- 
+  
   <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
 </body>
 
