--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbar14">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item"> <a class="nav-link" href="#">Home</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="#">Discord Bots</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="#">MC Projects</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="/bots">Discord Bots</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials &amp; Projects</a> </li>
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
@@ -112,8 +112,8 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
- 
   <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
+
 </body>
 
 </html>
