--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="card-body">
               <h5 class="card-title">Nano Bot</h5>
               <p class="card-text">The Simple Minecraft SMP Manager Bot for <a href="http://discordapp.com" target="_blank">Discord</a>.</p>
-              <a href="#" class="btn btn-primary">Learn More</a>
+              <a class="btn btn-primary" href="/bots">Learn More</a>
             </div>
           </div>
         </div>
@@ -82,7 +82,7 @@
               <div class="carousel-item"> <img class="d-block img-fluid w-100" src="https://img.youtube.com/vi/zMVlPuyuYMk/maxresdefault.jpg">
               </div>
             </div>
-          </div><a class="btn btn-secondary text-center btn-block mx-auto mt-2" href="#">See More</a>
+          </div><a class="btn btn-secondary text-center btn-block mx-auto mt-2" href="/mc">See More</a>
         </div>
       </div>
     </div>
@@ -113,7 +113,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
-
+  
 </body>
 
 </html>
