--- a/404.html
+++ b/404.html
@@ -17,10 +17,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbar14">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item"> <a class="nav-link" href="#">Home</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="#">Discord Bots</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="#">MC Projects</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="/bots">Discord Bots</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Projects</a> </li>
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
@@ -42,7 +42,7 @@
         <div class="col-2 mt-2 col-md-3" style=""><img class="d-block rounded-circle img-fluid float-left" src="https://pbs.twimg.com/profile_images/1004998577490354176/B9bchwQa_400x400.jpg" width="200"></div>
         <div class="ml-0 mt-0 col-sm-10 col-md-9" style="">
           <h1 class="display-1 text-light">Could not find that page.</h1>
-          <p class="">Hello, my name is <b>Samstep</b>. I enjoy making <b>Discord</b> <b>Bots</b> and fun <b>Minecraft</b> creations in my pass time!</p>
+          
         </div>
       </div>
     </div>
