--- a/mc/index.html
+++ b/mc/index.html
@@ -49,21 +49,21 @@
           <div class="card"> <img class="card-img-top" src="https://img.youtube.com/vi/lHrQfyynM0k/maxresdefault.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">Custom Join Message (One Time)</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a class="btn btn-primary btn-lg btn-block" href="/tutorials/joinmsg_1time">Learn More</a>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/tutorials/joinmsg_1time">Learn More</a>
             </div>
           </div>
           <div class="card mt-3"> <img class="card-img-top" src="https://img.youtube.com/vi/yprauoIBGgg/maxresdefault.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">Vanilla Server Series</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a class="btn btn-primary btn-lg btn-block" href="/tutorials/command_server">Learn More</a>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/tutorials/command_server">Learn More</a>
             </div>
           </div>
         </div>
         <div class="col-md-6">
           <div class="card"> <img class="card-img-top" src="https://img.youtube.com/vi/S0WoWQTGki8/maxresdefault.jpg" alt="Card image cap">
-            <div class="card-body">
+            <div class="card-body"> 
               <h4 class="card-title">Custom Join Message (Every Time)</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a class="btn btn-primary btn-lg btn-block" href="/tutorials/joinmsg_everytime">Learn More</a>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/tutorials/joinmsg_everytime">Learn More</a>
             </div>
           </div>
         </div>
@@ -86,7 +86,7 @@
           <div class="card"> <img class="card-img-top" src="https://img.youtube.com/vi/2NdjiZzv4tU/maxresdefault.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">Gamerules</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a class="btn btn-primary btn-lg btn-block" href="/one_cmd/gamerules">Learn More</a>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/one_cmd/gamerules">Learn More</a>
             </div>
           </div>
         </div>
@@ -94,7 +94,7 @@
           <div class="card"> <img class="card-img-top" src="https://img.youtube.com/vi/iLskHTEAM4I/maxresdefault.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">Triggered</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a class="btn btn-primary btn-lg btn-block" href="/one_cmd/triggered">Learn More</a>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/one_cmd/triggered">Learn More</a>
             </div>
           </div>
         </div>
@@ -113,7 +113,7 @@
           <div class="card"> <img class="card-img-top" src="https://img.youtube.com/vi/Nii8T6rSAEw/maxresdefault.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">Rainbow Pack</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a class="btn btn-primary btn-lg btn-block" href="/resource_packs/rainbow">Learn More</a>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/resource_packs/rainbow">Learn More</a>
             </div>
           </div>
         </div>
