--- a/bots/index.html
+++ b/bots/index.html
@@ -18,10 +18,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbar14">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item"> <a class="nav-link" href="#">Home</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="#">Discord Bots</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="#">MC Tutorials &amp; Projects</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link active" href="/bots">Discord Bots</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials &amp; Projects</a> </li>
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
