--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbar14">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
+          <li class="nav-item"> <a class="nav-link active" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/bots">Discord Bots</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials &amp; Projects</a> </li>
