--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
           <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/bots">Discord Bots</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Projects</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials & Projects</a> </li>
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
