mobile "logo" updated

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark" style="">
     <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
-        <p class="navbar-brand mb-0 text-white"> BRAND </p>
+        <p class="navbar-brand mb-0 text-white"> Samstep </p>
       </button>
       <div class="collapse navbar-collapse" id="navbar14">
         <ul class="navbar-nav mr-auto">
