--- a/404.html
+++ b/404.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
+    <meta http-equiv="refresh" content="0; URL='/#'" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
   <link rel="stylesheet" href="theme.css">
   <title>Samstep - Page Not Found</title>
   <link rel="icon" href="https://avatars2.githubusercontent.com/u/24730717?s=400&amp;v=4">
@@ -19,9 +20,13 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="/bots">Discord Bots</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="https://discordbots.samstep.ga">Discord Bots</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials & Projects</a> </li>
         </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.ga">
+                <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
+              </a> </li>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
               <i class="fa fa-github fa-fw fa-lg"></i>
@@ -32,6 +37,10 @@
           <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
               <i class="fa fa-twitter fa-fw fa-lg"></i>
             </a> </li>
+            <li class="nav-item mx-1"> <a class="nav-link" href="http://twitch.tv/Saamstep">
+              <i class="fab fa-twitch fa-fw fa-lg"></i>
+            </a> </li>
+
         </ul>
       </div>
     </div>
