--- a/mc/resource_packs/rainbow.html
+++ b/mc/resource_packs/rainbow.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
   <link rel="stylesheet" href="theme.css">
   <title>Samstep - Rainbow Pack</title>
   <link rel="icon" href="https://avatars2.githubusercontent.com/u/24730717?s=400&amp;v=4">
@@ -21,9 +22,14 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="/bots">Discord Bots</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link active" href="/mc">MC Tutorials &amp; Projects</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="https://discordbots.samstep.ga">Discord Bots</a> </li>
+                    <li class="nav-item d-flex"> <a class="nav-link active" href="/mc">MC Tutorials &amp; Projects</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
         </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.ga">
+                <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
+              </a> </li>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
               <i class="fa fa-github fa-fw fa-lg"></i>
@@ -33,6 +39,9 @@
             </a> </li>
           <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
               <i class="fa fa-twitter fa-fw fa-lg"></i>
+            </a> </li>
+            <li class="nav-item mx-1"> <a class="nav-link" href="http://twitch.tv/Saamstep">
+              <i class="fab fa-twitch fa-fw fa-lg"></i>
             </a> </li>
         </ul>
       </div>
@@ -105,18 +114,7 @@
     </div>
   </div>
   <div class="bg-dark pt-4">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h1 class="display-4 text-light">Contact</h1>
-          <p class="text-white">The best way to get a hold of me is via Twitter.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12"><a class="btn text-white p-0 py-0 pr-0 m-0 mx-0" href="http://bit.ly/tweetsamstep" style="background: rgb(85, 172, 238);" target="_blank" id="center"><i class="fa fa-twitter fa-fw fa-1x py-1"></i> Tweet</a></div>
-      </div>
-    </div>
-  </div>
+
   <div class="py-3 bg-dark">
     <div class="container">
       <div class="row">
