--- a/contact.html
+++ b/contact.html
@@ -2,22 +2,16 @@
 <html>
 
 <head>
+  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
   <link rel="stylesheet" href="theme.css">
-  <title>Samstep - Triggered One CMD</title>
+  <title>Samstep - Contact</title>
   <link rel="icon" href="https://avatars2.githubusercontent.com/u/24730717?s=400&amp;v=4">
-  <link rel="stylesheet" href="../theme.css">
-  <link rel="stylesheet" href="..css">
-  <link rel="stylesheet" href="theme.css">
-  <link rel="stylesheet" href="../theme.css">
-  <link rel="stylesheet" href=".css">
-  <link rel="stylesheet" href="../../theme.css">
 </head>
 
-<body>
+<body class="bg-dark">
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark" style="">
     <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
         <p class="navbar-brand mb-0 text-white"> BRAND </p>
@@ -27,8 +21,9 @@
           <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="https://discordbots.samstep.ga">Discord Bots</a> </li>
-                    <li class="nav-item d-flex"> <a class="nav-link active" href="/mc">MC Tutorials &amp; Projects</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials & Projects</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link active" href="/contact">Contact</a> </li>
+        
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.ga">
@@ -47,49 +42,38 @@
             <li class="nav-item mx-1"> <a class="nav-link" href="http://twitch.tv/Saamstep">
               <i class="fab fa-twitch fa-fw fa-lg"></i>
             </a> </li>
+
         </ul>
       </div>
     </div>
   </nav>
-  <div class="py-5">
+  <div class="bg-dark py-5 pb-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          <h1 class="">Triggered in One Command</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 text-body">
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe src="https://www.youtube.com/embed/iLskHTEAM4I" allowfullscreen="" class="embed-responsive-item"></iframe>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-      </div>
-      <div class="row">
-        <div class="col-md-6 my-3" style="">
-          <h3 class="">About:</h3>
-          <p class="mt-3"> A simple one command to get "hyper" in Minecraft! Do /trigger triggered set 1 to enable your triggered mode. And use the control book to edit the available settings.</p>
-        </div>
-        <div class="col-md-6 my-3">
-          <div class="list-group">
-            <a class="list-group-item list-group-item-action">MC Version: 1.9 - 1.10</a>
-            <a href="http://pastebin.com/raw/gdCQtisg" class="list-group-item list-group-item-action">Install URL:&nbsp;http://pastebin.com/raw/gdCQtisg</a><a class="list-group-item list-group-item-action" href="http://pastebin.com/raw/ZiTahyWS">UnInstall URL: http://pastebin.com/raw/ZiTahyWS</a>
-            <a href="https://youtu.be/iLskHTEAM4I" class="list-group-item list-group-item-action">YouTube Video URL:&nbsp;https://youtu.be/iLskHTEAM4I</a>
-            <a href="http://mrgarretto.com" class="list-group-item list-group-item-action">Credits: CMD Combiner by Mr. Garretto</a>
-          </div>
+        
+        <div class="ml-0 mt-0 col-sm-10 col-md-9" style="">
+            <h2 class="display-5 text-light">Twitter</h2>
+            <p class="text-light">Send me a message via Twitter and I can get back to you as soon as possible!</p>
+            <a class="btn text-white p-0 py-0 pr-0 m-0 mx-0" href="http://bit.ly/tweetsamstep" style="background: rgb(85, 172, 238);" target="_blank" id="center"><i class="fa fa-twitter fa-fw fa-1x py-1"></i> Tweet</a>
         </div>
       </div>
     </div>
   </div>
-  <div class="bg-dark pt-4">
-
   <div class="py-3 bg-dark">
+    <div class="container">
+      <div class="row"></div>
+    </div>
+  </div>
+  <div class="py-3 bg-dark">
+    <div class="container">
+      <div class="row"></div>
+    </div>
+  </div>
+  <div class="py-5">
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <p class="text-white">Website by Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
+          <p class="text-white mt-5 pt-5">Website by Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
         </div>
       </div>
     </div>
@@ -97,8 +81,8 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  
   <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
+ 
 </body>
 
 </html>
