--- a/index.html
+++ b/index.html
@@ -21,26 +21,27 @@
           <li class="nav-item"> <a class="nav-link active" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="https://discordbots.samstep.ga">Discord Bots</a> </li>
-                    <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials &amp; Projects</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials &amp; Projects</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.ga">
-                <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
+          <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.ga">
+              <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
+            </a> </li>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
+                <i class="fa fa-github fa-fw fa-lg"></i>
               </a> </li>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
-              <i class="fa fa-github fa-fw fa-lg"></i>
-            </a> </li>
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://bit.ly/sub2samstep">
-              <i class="fa fa-youtube fa-fw fa-lg"></i>
-            </a> </li>
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
-              <i class="fa fa-twitter fa-fw fa-lg"></i>
-            </a> </li>
+            <li class="nav-item mx-1"> <a class="nav-link" href="http://bit.ly/sub2samstep">
+                <i class="fa fa-youtube fa-fw fa-lg"></i>
+              </a> </li>
+            <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
+                <i class="fa fa-twitter fa-fw fa-lg"></i>
+              </a> </li>
             <li class="nav-item mx-1"> <a class="nav-link" href="http://twitch.tv/Saamstep">
-              <i class="fab fa-twitch fa-fw fa-lg"></i>
-            </a> </li>
+                <i class="fab fa-twitch fa-fw fa-lg"></i>
+              </a> </li>
+          </ul>
         </ul>
       </div>
     </div>
@@ -56,16 +57,21 @@
       </div>
     </div>
   </div>
-  <div class="py-3">
+  <div class="py-3" style="">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <div class="card text-center">
-            <div class="card-header"> Recent Project</div>
+            <div class="card-header">Discord Bot Projects</div>
             <div class="card-body">
               <h5 class="card-title">Nano Bot</h5>
-              <p class="card-text">The Simple Minecraft SMP Manager Bot for <a href="http://discordapp.com" target="_blank">Discord</a>.</p>
+              <p class="card-text">Minecraft SMP manager, fun commands, game commands, and way more.</p>
               <a class="btn btn-primary" href="https://discordbots.samstep.ga">Learn More</a>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Modmail</h5>
+              <p class="card-text">Contact Discord server moderators or administrators safely and efficiently.</p>
+              <a class="btn btn-primary" href="http://discordbots.samstep.ga/modmail/info">Learn More</a>
             </div>
           </div>
         </div>
@@ -97,21 +103,20 @@
     </div>
   </div>
   <div class="bg-dark pt-4">
-
-  <div class="py-3 bg-dark">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <p class="text-white">Website by Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
+    <div class="py-3 bg-dark">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <p class="text-white">Website by Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
+          </div>
         </div>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
-  
 </body>
 
 </html>
