--- a/mc/index.html
+++ b/mc/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
   <link rel="stylesheet" href="theme.css">
-  <title>Samstep - MC</title>
+  <title>Samstep - Minecraft</title>
   <link rel="icon" href="https://avatars2.githubusercontent.com/u/24730717?s=400&amp;v=4">
   <link rel="stylesheet" href="../theme.css">
 </head>
@@ -22,26 +22,27 @@
           <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="https://discordbots.samstep.ga">Discord Bots</a> </li>
-                    <li class="nav-item d-flex"> <a class="nav-link active" href="/mc">MC Tutorials &amp; Projects</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link active" href="/mc">MC Tutorials &amp; Projects</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.ga">
-                <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
+          <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.ga">
+              <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
+            </a> </li>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
+                <i class="fa fa-github fa-fw fa-lg"></i>
               </a> </li>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
-              <i class="fa fa-github fa-fw fa-lg"></i>
-            </a> </li>
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://bit.ly/sub2samstep">
-              <i class="fa fa-youtube fa-fw fa-lg"></i>
-            </a> </li>
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
-              <i class="fa fa-twitter fa-fw fa-lg"></i>
-            </a> </li>
+            <li class="nav-item mx-1"> <a class="nav-link" href="http://bit.ly/sub2samstep">
+                <i class="fa fa-youtube fa-fw fa-lg"></i>
+              </a> </li>
+            <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
+                <i class="fa fa-twitter fa-fw fa-lg"></i>
+              </a> </li>
             <li class="nav-item mx-1"> <a class="nav-link" href="http://twitch.tv/Saamstep">
-              <i class="fab fa-twitch fa-fw fa-lg"></i>
-            </a> </li>
+                <i class="fab fa-twitch fa-fw fa-lg"></i>
+              </a> </li>
+          </ul>
         </ul>
       </div>
     </div>
@@ -58,21 +59,21 @@
           <div class="card"> <img class="card-img-top" src="https://img.youtube.com/vi/lHrQfyynM0k/maxresdefault.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">Custom Join Message (One Time)</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/tutorials/joinmsg_1time">Learn More</a>
+              <p class="card-text">Join message for a player when they join for the first time.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/tutorials/joinmsg_1time">Learn More</a>
             </div>
           </div>
           <div class="card mt-3"> <img class="card-img-top" src="https://img.youtube.com/vi/yprauoIBGgg/maxresdefault.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">Vanilla Server Series</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/tutorials/command_server">Learn More</a>
+              <p class="card-text">A little series to teach and show you some basic command block examples that can help you in your Minecraft server.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/tutorials/command_server">Learn More</a>
             </div>
           </div>
         </div>
         <div class="col-md-6">
           <div class="card"> <img class="card-img-top" src="https://img.youtube.com/vi/S0WoWQTGki8/maxresdefault.jpg" alt="Card image cap">
-            <div class="card-body"> 
+            <div class="card-body">
               <h4 class="card-title">Custom Join Message (Every Time)</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/tutorials/joinmsg_everytime">Learn More</a>
+              <p class="card-text">Join message for a player everytime they join your server.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/tutorials/joinmsg_everytime">Learn More</a>
             </div>
           </div>
         </div>
@@ -95,7 +96,7 @@
           <div class="card"> <img class="card-img-top" src="https://img.youtube.com/vi/2NdjiZzv4tU/maxresdefault.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">Gamerules</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/one_cmd/gamerules">Learn More</a>
+              <p class="card-text">Allows you to change gamerules with a book.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/one_cmd/gamerules">Learn More</a>
             </div>
           </div>
         </div>
@@ -103,7 +104,7 @@
           <div class="card"> <img class="card-img-top" src="https://img.youtube.com/vi/iLskHTEAM4I/maxresdefault.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">Triggered</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/one_cmd/triggered">Learn More</a>
+              <p class="card-text">Makes you triggered in Minecraft.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/one_cmd/triggered">Learn More</a>
             </div>
           </div>
         </div>
@@ -122,7 +123,7 @@
           <div class="card"> <img class="card-img-top" src="https://img.youtube.com/vi/Nii8T6rSAEw/maxresdefault.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">Rainbow Pack</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/resource_packs/rainbow">Learn More</a>
+              <p class="card-text">Simplistic default edit wiht a slight rainbow theme.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/resource_packs/rainbow">Learn More</a>
             </div>
           </div>
         </div>
@@ -131,21 +132,20 @@
     </div>
   </div>
   <div class="bg-dark pt-4">
-
-  <div class="py-3 bg-dark">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <p class="text-white">Website by Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
+    <div class="py-3 bg-dark">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <p class="text-white">Website by Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
+          </div>
         </div>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
- 
-  <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
 </body>
 
 </html>
