--- a/bots/index.html
+++ b/bots/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="refresh" content="0; URL='https://discordbots.samstep.ga'" />
+  <meta http-equiv="refresh" content="0; URL='https://discordbots.samstep.net'" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
   <link rel="stylesheet" href="theme.css">
@@ -21,12 +21,12 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link active" href="https://discordbots.samstep.ga">Discord Bots</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link active" href="https://discordbots.samstep.net">Discord Bots</a> </li>
                     <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials &amp; Projects</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.ga">
+            <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.net">
                 <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
               </a> </li>
         <ul class="navbar-nav ml-auto">
