--- a/discordinvite.html
+++ b/discordinvite.html
@@ -20,12 +20,12 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link active" href="https://discordbots.samstep.ga">Discord Bots</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link active" href="https://discordbots.samstep.net">Discord Bots</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials &amp; Projects</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.ga">
+          <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.net">
               <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
             </a> </li>
           <ul class="navbar-nav ml-auto">
@@ -62,7 +62,7 @@
           <h5 class="modal-title">Invalid Client ID</h5> <button type="button" class="close" data-dismiss="modal"> <span>×</span> </button>
         </div>
         <div class="modal-body">
-          <p>Please make sure to enter a Client ID in the specified field. If you are stuck refer to <a href="https://discordbots.samstep.ga" target="_blank">https://discordbots.samstep.ga</a>.</p>
+          <p>Please make sure to enter a Client ID in the specified field. If you are stuck refer to <a href="https://discordbots.samstep.net" target="_blank">https://discordbots.samstep.net</a>.</p>
         </div>
         <div class="modal-footer"> <button type="button" class="btn btn-secondary" data-dismiss="modal">Got it!</button> </div>
       </div>
