--- a/404.html
+++ b/404.html
@@ -20,11 +20,11 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="https://discordbots.samstep.ga">Discord Bots</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="https://discordbots.samstep.net">Discord Bots</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials &amp; Projects</a> </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.ga">
+          <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.net">
               <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
             </a> </li>
           <ul class="navbar-nav ml-auto">
