--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <a class="nav-link active" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="https://discordbots.samstep.ga">Discord Bots</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="https://discordbots.samstep.net">Discord Bots</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials &amp; Projects</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.ga">
+          <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.net">
               <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
             </a> </li>
           <ul class="navbar-nav ml-auto">
@@ -66,12 +66,12 @@
             <div class="card-body">
               <h5 class="card-title">Nano Bot</h5>
               <p class="card-text">Minecraft SMP manager, fun commands, game commands, and way more.</p>
-              <a class="btn btn-primary" href="https://discordbots.samstep.ga">Learn More</a>
+              <a class="btn btn-primary" href="https://discordbots.samstep.net">Learn More</a>
             </div>
             <div class="card-body">
               <h5 class="card-title">Modmail</h5>
               <p class="card-text">Contact Discord server moderators or administrators safely and efficiently.</p>
-              <a class="btn btn-primary" href="http://discordbots.samstep.ga/modmail/info">Learn More</a>
+              <a class="btn btn-primary" href="http://discordbots.samstep.net/modmail/info">Learn More</a>
             </div>
           </div>
         </div>
