modmail added | twitch link updated

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="theme.css">
   <title>Samstep - Home</title>
   <link rel="icon" href="https://avatars2.githubusercontent.com/u/24730717?s=400&amp;v=4">
+  <link rel="stylesheet" type="text/css" href="transition.css"/>
 </head>
 
 <body>
@@ -20,7 +21,7 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <a class="nav-link active" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="https://discordbots.samstep.net">Discord Bots</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="https://samstep.net/bots">Discord Bots</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials &amp; Projects</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
         </ul>
@@ -38,7 +39,7 @@
             <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
                 <i class="fa fa-twitter fa-fw fa-lg"></i>
               </a> </li>
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://twitch.tv/Saamstep">
+            <li class="nav-item mx-1"> <a class="nav-link" href="https://twitch.tv/samstep">
                 <i class="fab fa-twitch fa-fw fa-lg"></i>
               </a> </li>
           </ul>
@@ -49,10 +50,10 @@
   <div class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-2 mt-2 col-md-3" style=""><img class="d-block rounded-circle img-fluid float-left" src="https://pbs.twimg.com/profile_images/1004998577490354176/B9bchwQa_400x400.jpg" width="200"></div>
+        <div class="col-2 mt-2 col-md-3" style=""><img class="ldt-bounce-in d-block rounded-circle img-fluid float-left" src="https://pbs.twimg.com/profile_images/1004998577490354176/B9bchwQa_400x400.jpg" width="200"></div>
         <div class="ml-0 mt-0 col-sm-10 col-md-9" style="">
-          <h1 class="display-1">Welcome!</h1>
-          <p class="">Hello, my name is <b>Samstep</b>. I enjoy making <b>Discord</b> <b>Bots</b> and fun <b>Minecraft</b> creations in my pass time!</p>
+          <h1 class="display-1 ldt-fade-in">Welcome!</h1>
+          <p class="ldt-fade-in">Hello, my name is <b>Samstep</b>. I enjoy making <b>Discord</b> <b>Bots</b> and fun <b>Minecraft</b> creations in my pass time!</p>
         </div>
       </div>
     </div>
@@ -62,16 +63,11 @@
       <div class="row">
         <div class="col-md-12">
           <div class="card text-center">
-            <div class="card-header">Discord Bot Projects</div>
+            <div class="card-header">Latest Bot Projects</div>
             <div class="card-body">
-              <h5 class="card-title">Nano Bot</h5>
-              <p class="card-text">Minecraft SMP manager, fun commands, game commands, and way more.</p>
-              <a class="btn btn-primary" href="https://discordbots.samstep.net">Learn More</a>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Modmail</h5>
+              <h5 class="card-title">ModMail</h5>
               <p class="card-text">Contact Discord server moderators or administrators safely and efficiently.</p>
-              <a class="btn btn-primary" href="http://discordbots.samstep.net/modmail/info">Learn More</a>
+              <a class="btn btn-primary" href="http://samstep.net/bots/modmail/">Learn More</a>
             </div>
           </div>
         </div>
