--- a/mc/projtemp.html
+++ b/mc/projtemp.html
@@ -15,13 +15,13 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark" style="">
     <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
-        <p class="navbar-brand mb-0 text-white"> BRAND </p>
+        <p class="navbar-brand mb-0 text-white"> Samstep </p>
       </button>
       <div class="collapse navbar-collapse" id="navbar14">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="https://discordbots.samstep.net">Discord Bots</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="https://samstep.net/bots">Discord Bots</a> </li>
                     <li class="nav-item d-flex"> <a class="nav-link active" href="/mc">MC Tutorials &amp; Projects</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
         </ul>
@@ -39,7 +39,7 @@
           <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
               <i class="fa fa-twitter fa-fw fa-lg"></i>
             </a> </li>
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://twitch.tv/Saamstep">
+            <li class="nav-item mx-1"> <a class="nav-link" href="https://twitch.tv/samstep">
               <i class="fab fa-twitch fa-fw fa-lg"></i>
             </a> </li>
         </ul>
