--- a/twitch.html
+++ b/twitch.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL='http://twitch.tv/saamstep'" />
+<meta http-equiv="refresh" content="0; URL='https://twitch.tv/samstep'" />
