--- a/bots/index.html
+++ b/bots/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="refresh" content="0; URL='https://discordbots.samstep.net'" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
   <link rel="stylesheet" href="theme.css">
@@ -15,13 +14,13 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark" style="">
     <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
-        <p class="navbar-brand mb-0 text-white"> BRAND </p>
+        <p class="navbar-brand mb-0 text-white"> Samstep </p>
       </button>
       <div class="collapse navbar-collapse" id="navbar14">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link active" href="https://discordbots.samstep.net">Discord Bots</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link active" href="https://samstep.net/bots">Discord Bots</a> </li>
                     <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials &amp; Projects</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
         </ul>
@@ -39,15 +38,10 @@
           <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
               <i class="fa fa-twitter fa-fw fa-lg"></i>
             </a> </li>
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://twitch.tv/Saamstep">
+            <li class="nav-item mx-1"> <a class="nav-link" href="https://twitch.tv/samstep">
               <i class="fab fa-twitch fa-fw fa-lg"></i>
             </a> </li>
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://twitch.tv/Saamstep">
-              <i class="fab fa-twitch fa-fw fa-lg"></i>
-            </a> </li>
-           <li class="nav-item mx-1"> <a class="nav-link" href="http://twitch.tv/Saamstep">
-              <i class="fab fa-twitch fa-fw fa-lg"></i>
-            </a> </li>
+
         </ul>
       </div>
     </div>
@@ -64,22 +58,8 @@
           <div class="card">
             <div class="card-body">
               <h3 class=""><span class="badge badge-light">New</span></h3>
-              <h4 class="card-title">Nano</h4>
-              <p class="card-text">The custom bot for you Minecraft SMP.</p> <a href="https://github.com/saamstep/nanobot/wiki" class="btn btn-primary">Learn More</a>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-body">
-              <h3 class=""><span class="badge badge-light">In Development</span></h3>
-              <h4 class="card-title">Nerd</h4>
-              <p class="card-text text-body">The bot that knows everything. <b>(Soon)</b></p> <a href="#" class="btn btn-primary disabled">Learn More</a>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-body">
-              <h3 class=""><span class="badge badge-light">Deprecated</span></h3>
-              <h4 class="card-title">Honeydew</h4>
-              <p class="card-text">A Discord bot built with JS for Honeydew. <b class="text-success">This bot is being rebuilt!</b></p> <a href="#" class="btn btn-primary disabled">Learn More</a>
+              <h4 class="card-title">ModMail</h4>
+              <p class="card-text">Securely and safely message server staff.</p> <a href="/bots/modmail/" class="btn btn-primary">Learn More</a>
             </div>
           </div>
         </div>
