--- a/discordinvite.html
+++ b/discordinvite.html
@@ -14,13 +14,13 @@
 <body class="bg-dark">
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark" style="">
     <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
-        <p class="navbar-brand mb-0 text-white"> BRAND </p>
+        <p class="navbar-brand mb-0 text-white"> Samstep </p>
       </button>
       <div class="collapse navbar-collapse" id="navbar14">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link active" href="https://discordbots.samstep.net">Discord Bots</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link active" href="https://samstep.net/bots">Discord Bots</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials &amp; Projects</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
         </ul>
@@ -38,7 +38,7 @@
             <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
                 <i class="fa fa-twitter fa-fw fa-lg"></i>
               </a> </li>
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://twitch.tv/Saamstep">
+            <li class="nav-item mx-1"> <a class="nav-link" href="https://twitch.tv/samstep">
                 <i class="fab fa-twitch fa-fw fa-lg"></i>
               </a> </li>
           </ul>
@@ -62,7 +62,7 @@
           <h5 class="modal-title">Invalid Client ID</h5> <button type="button" class="close" data-dismiss="modal"> <span>×</span> </button>
         </div>
         <div class="modal-body">
-          <p>Please make sure to enter a Client ID in the specified field. If you are stuck refer to <a href="https://discordbots.samstep.net" target="_blank">https://discordbots.samstep.net</a>.</p>
+          <p>Please make sure to enter a Client ID in the specified field. If you are stuck refer to <a href="https://samstep.net/bots" target="_blank">https://samstep.net/bots</a>.</p>
         </div>
         <div class="modal-footer"> <button type="button" class="btn btn-secondary" data-dismiss="modal">Got it!</button> </div>
       </div>
