--- a/bots/index.html
+++ b/bots/index.html
@@ -59,7 +59,14 @@
             <div class="card-body">
               <h3 class=""><span class="badge badge-light">New</span></h3>
               <h4 class="card-title">ModMail</h4>
-              <p class="card-text">Securely and safely message server staff.</p> <a href="/bots/modmail/" class="btn btn-primary">Learn More</a>
+              <p class="card-text">Securely and safely message server staff.</p> <a href="/bots/modmail" class="btn btn-primary">Learn More</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <h3 class=""><span class="badge badge-light">New</span></h3>
+              <h4 class="card-title">Bot Invite Generator</h4>
+              <p class="card-text">Supports generating server invite URLS for ModMail</p> <a href="/invite-generator" class="btn btn-primary">Learn More</a>
             </div>
           </div>
         </div>
